1) Adding client_requirements.txt 2) Update conda_environment.yaml 3) Updated .gitignore

--- a/conda_environment.yaml
+++ b/conda_environment.yaml
@@ -9,3 +9,4 @@ dependencies:
         - google-cloud-storage==1.35.0
         - tda-api==1.1.1
         - coverage==5.4
+        - selenium==3.141.0
